# mumei

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
RealRobot/: Encoder.py  HURONEncoder.py  HURONJoint.py  Joint.py  Limb.py  Motor.py  ODrive.py  PositionMotor.py  Robot.py  TorqueMotor.py  framework.py  main.py
docs/: Makefile  conf.py  example.ipynb  make.bat
huron/: HURONEncoder.py  HURONJoint.py  ODriveController.py  PositionMotor.py  TorqueMotor.py  main.py  odrive-cansimple.dbc
mumei/: Encoder.py  GenericComponent.py  Joint.py  Limb.py  MovingComponent.py  Robot.py  __init__.py
src/mumei/: Encoder.py  Joint.py  Limb.py  Motor.py  MovingComponent.py  Robot.py  __init__.py  mumei.py
tests/: test_mumei.py
