[tool.poetry]
name = "mumei"
version = "0.1.0"
description = "A unified framework for robotics software"
authors = ["Duc Doan et al."]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
